fixed blurry kijkwijzer icons

--- a/src/client/ondemand.styl
+++ b/src/client/ondemand.styl
@@ -132,3 +132,33 @@ a.btn-xs > .glyphicon {
   to {transform: rotate(359deg);}
 }
 
+.kijkwijzer {
+  background: url('kijkwijzer.png') no-repeat top left;
+  width: 37px;
+  height: 37px;
+  display: inline-block;
+  -webkit-filter: invert(100%);
+  &.sprite_6 { background-position: 0 0; }
+  &.sprite_9 { background-position: 0 -37px; }
+  &.sprite_12 { background-position: 0 -74px; }
+  &.sprite_16 { background-position: 0 -111px; }
+  &.sprite_A { background-position: 0 -148px; }
+  &.sprite_AL { background-position: 0 -185px; }
+  &.sprite_D { background-position: 0 -222px; }
+  &.sprite_G { background-position: 0 -259px; }
+  &.sprite_H { background-position: 0 -296px; }
+  &.sprite_S { background-position: 0 -333px; }
+  &.sprite_T { background-position: 0 -370px; }
+}
+
+
+
+
+
+
+
+
+
+
+
+
